# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/graphic/graphic_2d/graphic_config.gni")

## Build libvulkan_debug_trace.so {{{
ohos_shared_library("vulkan_debug_trace_layer") {
  sources = [ "vk_debug_trace_layer.cpp" ]
  include_dirs = [
    "debug_trace_layer",
    "include",
  ]
  defines = [
    "VK_NO_PROTOTYPES",
    "VK_USE_PLATFORM_OHOS",
  ]
  cflags = [
    "-fvisibility=hidden",
    "-Wall",
    "-Werror",
    "-g3",
  ]
  cflags_cc = [ "-std=c++17" ]
  deps = [ "$graphic_2d_root/utils:scoped_bytrace" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "vulkan-headers:vulkan_headers",
    "vulkan-loader:vulkan_loader",
  ]

  output_name = "vulkan_debug"
  output_extension = "so"

  part_name = "graphic_2d"
  subsystem_name = "graphic"

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    cfi_vcall_icall_only = true
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
  }
}
## Build libvulkan_debug.so }}}

## Build VkLayer_debug_trace.json {{{
ohos_prebuilt_etc("vulkan_debug_trace_layer_json") {
  source = "VkLayer_debug_trace.json"
  part_name = "graphic_2d"
  subsystem_name = "graphic"
  module_install_dir = "etc/vulkan/debug/vulkan/explicit_layer.d"
}
## Build VkLayer_debug_trace.json }}}