# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
module_out_path = "thirdparty/vulkan-loader"

group("unittest") {
  testonly = true

  deps = [ ":vk_bundle_mgr_helper_test" ]
}

ohos_unittest("vk_bundle_mgr_helper_test") {
  module_out_path = module_out_path
  sources = [ "vk_bundle_mgr_helper_tests.cpp" ]
  deps = [ ":vk_bundle_mgr_helper_test_common" ]

  external_deps = [
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "ipc:ipc_core",
    "vulkan-headers:vulkan_headers",
    "vulkan-loader:vulkan_loader",
    "samgr:samgr_proxy",
  ]
}

ohos_static_library("vk_bundle_mgr_helper_test_common") {
  visibility = [ ":*" ]
  testonly = true

  public_configs = [ ":vk_bundle_mgr_helper_test_common_public_config" ]

  external_deps = [
    "c_utils:utils",
    "googletest:gtest_main",
    "hilog:libhilog",
  ]

  subsystem_name = "bundle_info"
  part_name = "vulkan-loader-bundle"
}

config("vk_bundle_mgr_helper_test_common_public_config") {
  include_dirs = [ "../../../bundle_mgr_helper" ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Dprivate=public",
    "-Dprotected=public",
  ]
}
