# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
module_out_path = "thirdparty/vulkan-loader"

group("unittest") {
  testonly = true

  deps = [ ":vk_bundle_mgr_helper_test" ]
}

ohos_unittest("vk_bundle_mgr_helper_test") {
  module_out_path = module_out_path
  sources = [ "vk_bundle_mgr_helper_tests.cpp" ]
  deps = [ "//third_party/vulkan-loader:vulkan_loader" ]

  external_deps = [
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_core",
    "vulkan-headers:vulkan_headers",
    "samgr:samgr_proxy",
  ]

  visibility = [ ":*" ]
  testonly = true

  include_dirs = [
    "//third_party/vulkan-loader/loader",
    "//third_party/vulkan-loader/loader/generated",
    "//third_party/vulkan-loader/openharmony",
    "//third_party/vulkan-loader/openharmony/bundle_mgr_helper",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  cflags_cc = [ "-std=c++17" ]
  subsystem_name = "bundle_info"
  part_name = "vulkan-loader-bundle"
}